Code refactoring. Price type bugs fixed. Order sorting and date added

--- a/public/header.html
+++ b/public/header.html
@@ -13,5 +13,5 @@
   <body>
     <div class='header'>
       <img src="./public/header.jpg" class="header_image">
-      Online Store
+      <div class="header-text">Online Store</div>
     </div>
