--- a/public/index.html
+++ b/public/index.html
@@ -111,6 +111,11 @@
             <div class="formError"></div>
             <button type="submit" class="order-send-btn btn-blue">Confirm order</button>
           </form>
+
+          <div class="checkout-waiting-message" style="display:none">
+            Waiting for payment..
+          </div>
+
         </div>
       
       </div>
